Single listing functionality, user can join listing and post comments

--- a/src/views/single-listing.html
+++ b/src/views/single-listing.html
@@ -79,42 +79,22 @@
         <div class="contributors-container">
           <header class="header--contributors">
             <h2>Contributors</h2>
-            <span id="js-listing-contributors-count" class="pill">10</span>
+            <span id="js-listing-contributors-count" class="pill"></span>
           </header>
           <ul id="js-listing-contributors" class="contributors">
             
           </ul>
         </div>
       </section>
-      <section class="listing__comments">
+      <section id="js-posted-comments" class="listing__comments">
         <h2>Comments</h2>
         <section class="post-comment">
           <p id="js-post-comment-content" class="textarea" contenteditable="true"></p>
           <button id="js-post-comment" class="submit">Post</button>
         </section>
 
-        <section class="posted-comments">
-          <article class="comment">
-            <section class="comment__author">
-              <section class="comment__meta">
-                <p class="u-name">
-                  Gelu Costeleanos
-                </p>
-  
-                <span class="u-role u-role--author">Author</span>
-                <span class="time">4 hours ago</span>
-              </section>
-
-              <img class="profile-pic author" src="https://lh4.googleusercontent.com/-jVeZqV0z--8/AAAAAAAAAAI/AAAAAAAAHO8/rE7uL1lvkZQ/photo.jpg" alt="User profile picture">
-          </section>
-
-            <section class="comment__content">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad fugit nam magni reiciendis magnam beatae doloribus voluptas aspernatur perspiciatis assumenda quae ducimus consectetur omnis molestias, sunt odio blanditiis similique animi?
-              Nam nihil sint repellendus praesentium culpa quo ab fuga aut, consequuntur quidem nulla autem placeat aliquid id quia error exercitationem dicta ea repudiandae. Nemo cupiditate reiciendis praesentium nam reprehenderit tempora?
-              Molestiae provident consectetur maxime eius numquam, doloremque quis accusantium id saepe enim, temporibus quas earum laborum aperiam quasi dolorum esse ea et nam non ducimus quo ut ad. Ipsum, sed!</p>
-            </section>
-
-          </article>
+        <section id="js-comments-container"  class="posted-comments">
+          
         </section>
 
       </section>
