--- a/src/public/scss/components/comments.scss
+++ b/src/public/scss/components/comments.scss
@@ -1,4 +1,6 @@
 .listing__comments {
+  display:none;
+  
   h2 {
     margin-bottom: 1em;
   }
@@ -11,6 +13,7 @@
     grid-template-rows: auto;
     grid-template-areas: "author"
                          "content";
+    grid-row-gap: 0.5em;
     
     .comment__author {
       grid-area: author;
