--- a/src/views/browse-listings.html
+++ b/src/views/browse-listings.html
@@ -65,8 +65,8 @@
         
         <form class="search__wrapper">
           <button onclick="location.href='add-listing.html';" class="listings__nav--new">New Listing</button>
-          <input type="text" class="search__box" placeholder="Alege locatia" required>
-          <input type="submit" class="search__button" value="search">
+          <input id="js-search-value" type="text" class="search__box" placeholder="Alege locatia" required>
+          <input type="button" id="js-search-button" type="submit" class="search__button" value="search">
         </form>
 
       </div>
