--- a/src/views/account.html
+++ b/src/views/account.html
@@ -102,27 +102,24 @@
             <input id="listings--active" type="radio" name="checkbox-group" class="tab__checkbox" checked>
             <label for="listings--active">Active</label>
             <div  class="tab__content">
-              <div id="js-listings-active"  class="flex">
-
+              <div class="container flex">
+                
               </div>
+              <div id="js-listings-active" class="flex"></div>
             </div>
           </div>
           <div class="tab">
             <input id="listings--completed" type="radio" name="checkbox-group" class="tab__checkbox">
             <label for="listings--completed">Completed</label>
             <div class="tab__content">
-              <div id="js-listings-completed"  class="flex">
-
-              </div>
+              <div id="js-listings-completed" class="flex"></div>
             </div>
           </div>
 
           <div class="tab">
             <input id="listings--requests" type="radio" name="checkbox-group" class="tab__checkbox">
             <label for="listings--requests">Requests</label>
-            <div class="tab__content">
-              
-            </div>
+            <div class="tab__content"></div>
           </div>
         </div>
       </section>
