--- a/src/views/browse-listings.html
+++ b/src/views/browse-listings.html
@@ -62,18 +62,14 @@
     <section id="js-listings" class="listings">
 
       <div class="listings__nav">
-        
         <form class="search__wrapper">
           <button onclick="location.href='add-listing.html';" class="listings__nav--new">New Listing</button>
           <input type="text" class="search__box" placeholder="Alege locatia" required>
           <input type="submit" class="search__button" value="search">
         </form>
-
       </div>
 
-      <div id="js-listings-flex" class="flex">
-
-      </div>
+      <div id="js-listings-flex" class="flex"></div>
 
     </section>
   </main>
@@ -87,10 +83,8 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </footer>
+  
   <script src="/js/Utilities/localforage.js"></script>
   <script type="module" src="/js/main.js"></script>
-
-
 </body>
-
 </html>
