--- a/src/public/scss/components/account.scss
+++ b/src/public/scss/components/account.scss
@@ -1,6 +1,6 @@
 .main--account {
   display: flex;
-  flex-direction: column;
+  flex-flow: column nowrap;
 
   .account {
     .account-container {
@@ -138,6 +138,7 @@
     }
 
     .listings-container {
+
       h2 {
         margin-bottom: 1em;
       }
@@ -184,6 +185,12 @@
             display: none;
             transition: all .3s ease-in-out;
             @include listings;
+
+            .container.flex {
+              .flex__item {
+                
+              }
+            }
           }
         }
       }
