--- a/src/views/account.html
+++ b/src/views/account.html
@@ -101,22 +101,37 @@
           <div class="tab">
             <input id="listings--active" type="radio" name="checkbox-group" class="tab__checkbox" checked>
             <label for="listings--active">Active</label>
-            <div  class="tab__content">
-              <div id="js-listings-active" class="flex"></div>
+            <div id="js-listings-active" class="tab__content">
+              <div id="js-listings-active" class="listings--active"></div>
             </div>
           </div>
           <div class="tab">
             <input id="listings--completed" type="radio" name="checkbox-group" class="tab__checkbox">
             <label for="listings--completed">Completed</label>
             <div class="tab__content">
-              <div id="js-listings-completed" class="flex"></div>
+              <div id="js-listings-completed" class="listings--completed">
+                <!-- <a href="" class="listing listing--author" data-listing-id="">
+                  <section class="listing__title">
+                    <h3 id="js-acc-listing-title" class="title">Some marvelous title. Smort. Noice.</h3>
+                  </section>
+
+                  <section class="listing__info">
+                  <span id="js-acc-listing-role" class="role">Author</span>
+                    <span id="js-acc-listing-place" class="place">Cărturești</span>
+                  </section>
+
+                  <span id="js-acc-listing-type" class="type">Coding</span>
+                </a> -->
+              </div>
             </div>
           </div>
 
           <div class="tab">
             <input id="listings--requests" type="radio" name="checkbox-group" class="tab__checkbox">
             <label for="listings--requests">Requests</label>
-            <div class="tab__content"></div>
+            <div class="tab__content">
+
+            </div>
           </div>
         </div>
       </section>
