--- a/src/public/scss/components/header.scss
+++ b/src/public/scss/components/header.scss
@@ -105,7 +105,7 @@
       .notification {
         margin: 0  0 .7em 0;
         display: flex;
-
+        cursor: pointer;
         &:last-of-type {
           margin-bottom: 0;
         }
