--- a/src/views/account.html
+++ b/src/views/account.html
@@ -101,7 +101,7 @@
           <div class="tab">
             <input id="listings--active" type="radio" name="checkbox-group" class="tab__checkbox" checked>
             <label for="listings--active">Active</label>
-            <div id="js-listings-active" class="tab__content">
+            <div  class="tab__content">
               <div id="js-listings-active" class="listings--active"></div>
             </div>
           </div>
