--- a/src/views/account.html
+++ b/src/views/account.html
@@ -127,10 +127,56 @@
           </div>
 
           <div class="tab">
-            <input id="listings--requests" type="radio" name="checkbox-group" class="tab__checkbox">
+            <input id="listings--requests" type="radio" name="checkbox-group" class="tab__checkbox" checked>
             <label for="listings--requests">Requests</label>
             <div class="tab__content">
+              <div id="js-listings-requests" class="requests">
+                <article class="request">
+                  <img src="https://lh4.googleusercontent.com/-jVeZqV0z--8/AAAAAAAAAAI/AAAAAAAAHO8/rE7uL1lvkZQ/photo.jpg" alt="User profile photo" class="profile-pic">
 
+                  <section class="request__content">
+                    <span class="name">Ionuț Golăescu</span>
+                    has requested to join your
+                    <span class="listing-title">meToo - PWA</span>
+                    listing.
+
+                    <section class="request__actions">
+                      <button class="accept">Accept</button>
+                      <button class="deny">Deny</button>
+                    </section>
+                  </section>
+                </article>
+                <article class="request">
+                  <img src="https://lh4.googleusercontent.com/-jVeZqV0z--8/AAAAAAAAAAI/AAAAAAAAHO8/rE7uL1lvkZQ/photo.jpg" alt="User profile photo" class="profile-pic">
+
+                  <section class="request__content">
+                    <span class="name">Ionuț Golăescu</span>
+                    has requested to join your
+                    <span class="listing-title">meToo - PWA</span>
+                    listing.
+
+                    <section class="request__actions">
+                      <button class="accept">Accept</button>
+                      <button class="deny">Deny</button>
+                    </section>
+                  </section>
+                </article>
+                <article class="request">
+                  <img src="https://lh4.googleusercontent.com/-jVeZqV0z--8/AAAAAAAAAAI/AAAAAAAAHO8/rE7uL1lvkZQ/photo.jpg" alt="User profile photo" class="profile-pic">
+
+                  <section class="request__content">
+                    <span class="name">Ionuț Golăescu</span>
+                    has requested to join your
+                    <span class="listing-title">meToo - PWA</span>
+                    listing.
+
+                    <section class="request__actions">
+                      <button class="accept">Accept</button>
+                      <button class="deny">Deny</button>
+                    </section>
+                  </section>
+                </article>
+              </div>
             </div>
           </div>
         </div>
