minor fix in account.html

--- a/src/views/account.html
+++ b/src/views/account.html
@@ -131,7 +131,7 @@
             <label for="listings--requests">Requests</label>
             <div class="tab__content">
               <div id="js-listings-requests" class="requests">
-                <article class="request">
+                <!-- <article class="request">
                   <img src="https://lh4.googleusercontent.com/-jVeZqV0z--8/AAAAAAAAAAI/AAAAAAAAHO8/rE7uL1lvkZQ/photo.jpg" alt="User profile photo" class="profile-pic">
 
                   <section class="request__content">
@@ -145,37 +145,7 @@
                       <button class="deny">Deny</button>
                     </section>
                   </section>
-                </article>
-                <article class="request">
-                  <img src="https://lh4.googleusercontent.com/-jVeZqV0z--8/AAAAAAAAAAI/AAAAAAAAHO8/rE7uL1lvkZQ/photo.jpg" alt="User profile photo" class="profile-pic">
-
-                  <section class="request__content">
-                    <span class="name">Ionuț Golăescu</span>
-                    has requested to join your
-                    <span class="listing-title">meToo - PWA</span>
-                    listing.
-
-                    <section class="request__actions">
-                      <button class="accept">Accept</button>
-                      <button class="deny">Deny</button>
-                    </section>
-                  </section>
-                </article>
-                <article class="request">
-                  <img src="https://lh4.googleusercontent.com/-jVeZqV0z--8/AAAAAAAAAAI/AAAAAAAAHO8/rE7uL1lvkZQ/photo.jpg" alt="User profile photo" class="profile-pic">
-
-                  <section class="request__content">
-                    <span class="name">Ionuț Golăescu</span>
-                    has requested to join your
-                    <span class="listing-title">meToo - PWA</span>
-                    listing.
-
-                    <section class="request__actions">
-                      <button class="accept">Accept</button>
-                      <button class="deny">Deny</button>
-                    </section>
-                  </section>
-                </article>
+                </article> -->
               </div>
             </div>
           </div>
