typo in account.html

--- a/src/views/account.html
+++ b/src/views/account.html
@@ -127,7 +127,7 @@
           </div>
 
           <div class="tab">
-            <input id="listings--requests" type="radio" name="checkbox-group" class="tab__checkbox" checked>
+            <input id="listings--requests" type="radio" name="checkbox-group" class="tab__checkbox">
             <label for="listings--requests">Requests</label>
             <div class="tab__content">
               <div id="js-listings-requests" class="requests">
