--- a/src/views/account.html
+++ b/src/views/account.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet"  type="text/css" href="/css/styles.min.css">
   <title>Account</title>
 </head>
-<body>
+<body class="b--account">
   <header class="header">
     <div class="title">
       <a class="title-text" href="#">
