--- a/src/views/browse-listings.html
+++ b/src/views/browse-listings.html
@@ -15,7 +15,6 @@
 </head>
 
 <body class="b--listings">
-
   <header class="header">
     <div class="title">
       <a class="title-text" href="#">
@@ -69,7 +68,11 @@
         </form>
       </div>
 
-      <div id="js-listings-flex" class="flex"></div>
+      <div id="js-listings-flex" class="flex">
+        <div id="js-loader" class="loader">
+          <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+        </div>
+      </div>
 
     </section>
   </main>
