--- a/src/public/scss/components/account.scss
+++ b/src/public/scss/components/account.scss
@@ -1,3 +1,7 @@
+.b--account {
+  overflow-y: scroll;
+}
+
 .main--account {
   display: flex;
   flex-flow: column nowrap;
@@ -73,10 +77,6 @@
           .skills {
             display: flex;
             flex-flow: row wrap;
-
-            &:nt ~ .edit {
-
-            }
     
             .skill {
               padding: .2em .3em;
@@ -195,6 +195,7 @@
             .listings--completed,
             .requests {
               padding-top: .5em;
+              margin-bottom: 1.5em;
               display: flex;
               flex-flow: column nowrap;
             }
