--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -5,6 +5,7 @@
 @import "utils/mixins";
 
 // components
+@import "components/loader";
 @import "components/header";
 @import "components/card";
 @import "components/footer";
